Fix right menu style issues (vertical align without language flag)
[#161994632]

--- a/src/style/components/menu-bar.styl
+++ b/src/style/components/menu-bar.styl
@@ -49,7 +49,9 @@
   .menu-bar-right
     padding-left 0.5em
     padding-right 0.5em
-    margin-bottom: -0.35em;
+    height 100%
+    display flex
+    align-items center
 
     .menu-hidden, .menu-showing
       right 10px
